--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>1 <==> 11</title>
+  <style>
+    body {display: flex; justify-content: center; align-items: center; }
+  </style>
 </head>
 <body>
   <div id = "box">
     <canvas id ="puzzle" width="300px"></canvas>
-      <input type = "number" placeholder = "Введите число" autofocus></input>
+    <input type = "number" placeholder = "Введите число" autofocus></input>
   </div>
   <script src = "script.js"></script>
 </body>
