--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>1 <==> 11</title>
   <style>
-    body {display: flex; justify-content: center; align-items: center; }
+    body { min-height: 100vh; display: flex; justify-content: center; align-items: center; }
   </style>
 </head>
 <body>
